spacing fix

--- a/hairrecipe/hairrecipe/Content/pc-css/desktop-styles.css
+++ b/hairrecipe/hairrecipe/Content/pc-css/desktop-styles.css
@@ -324,7 +324,7 @@ footer .base ul li{
     width: 28px;
     background-size: 100%;
     display:inline-block;
-    left: -12px;
+    left: -6px;
     top: 6px;
 }
 
